@@ -1,47 +1,0 @@
-on:
-  issue_comment:
-    types: [created]
-name: Commands
-jobs:
-  document:
-    if: startsWith(github.event.comment.body, '/document')
-    name: document
-    runs-on: macOS-latest
-    steps:
-      - uses: actions/checkout@v1
-      - uses: r-lib/actions/pr-fetch@master
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-      - uses: r-lib/actions/setup-r@master
-      - name: Install dependencies
-        run: Rscript -e 'install.packages(c("remotes", "roxygen2"))' -e 'remotes::install_deps(dependencies = TRUE)'
-      - name: Document
-        run: Rscript -e 'roxygen2::roxygenise()'
-      - name: commit
-        run: |
-          git add man/\* NAMESPACE
-          git commit -m 'Document'
-      - uses: r-lib/actions/pr-push@master
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-  style:
-    if: startsWith(github.event.comment.body, '/style')
-    name: document
-    runs-on: macOS-latest
-    steps:
-      - uses: actions/checkout@master
-      - uses: r-lib/actions/pr-fetch@master
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-      - uses: r-lib/actions/setup-r@master
-      - name: Install dependencies
-        run: Rscript -e 'install.packages("styler")'
-      - name: style
-        run: Rscript -e 'styler::style_pkg()'
-      - name: commit
-        run: |
-          git add \*.R
-          git commit -m 'style'
-      - uses: r-lib/actions/pr-push@master
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
